# Eurobot-2025-Main

./: .gitignore  Project.btproj  README.md  build_micro_ros.sh  main  main_log.txt
Eurobot-2025-Main-ws/docker/: .bashrc  Dockerfile
Eurobot-2025-Main-ws/src/bt_app/bt_config/: Project1.btproj  bt_tree_node_model.xml
Eurobot-2025-Main-ws/src/bt_app/src/: bt_decorator_node_lib.cpp
Eurobot-2025-Main-ws/src/bt_app/src/node/: bt_ros2.cpp  localizationClient.cpp  navigationServer.cpp
Eurobot-2025-Main-ws/src/bt_application_2024/src/: bt_m.cpp  bt_nodes.cpp
Eurobot-2025-Main-ws/src/btcpp_ros2_interfaces/action/: FirmwareMission.action
docker/: .bashrc  .env  Dockerfile  Dockerfile_copy  Dockerfile_win  docker-compose-lin.yml  docker-compose-win.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh
groot/: install.sh
groot_ws/docker/: Dockerfile  docker-compose.yml
groot_ws/groot/: install.sh
groot_ws/src/bt_app/: CMakeLists.txt  package.xml
groot_ws/src/bt_app/bt_config/: Project.btproj  bt.xml  bt_tree_node_model.xml
groot_ws/src/bt_app/include/bt_app/: bt_action_node_lib.h  bt_decorator_node_lib.h  navigationTest.h
groot_ws/src/bt_app/src/: bt_action_node_lib.cpp  bt_kernel_lib.cpp  bt_utils_node_lib.cpp
groot_ws/src/bt_app/src/node/: bt.cpp  bt_ros2.cpp  localizationServer.cpp  navigationClient.cpp  navigationServer.cpp  navigationTest.cpp
groot_ws/src/bt_application_2024/: CMakeLists.txt  package.xml
groot_ws/src/bt_application_2024/bt_m_config/: bt_blue.xml  bt_tree_node_model.xml
groot_ws/src/bt_application_2024/include/bt_application/: bt_nodes.h
groot_ws/src/bt_application_2024/include/bt_application_2024/: bt_nodes.h
groot_ws/src/bt_application_2024/launch/: bt.launch
groot_ws/src/bt_application_2024/src/: bt_m.cpp  bt_nodes.cpp
groot_ws/src/btcpp_ros2_interfaces/: CMakeLists.txt  package.xml
groot_ws/src/btcpp_ros2_interfaces/action/: Navigation.action
scripts/: build_micro_ros.sh
src/Interface/btcpp_ros2_interfaces/: CMakeLists.txt
src/Interface/btcpp_ros2_interfaces/srv/: StartUpSrv.srv
src/bt_app_2025/: CMakeLists.txt  package.xml
src/bt_app_2025/bt_m_config/: Project.btproj  Project_blue_diff.btproj  bot1_blue_a.xml  bot1_blue_a_template.xml  bot1_blue_b.xml  bot1_blue_c.xml  bot1_blue_d.xml  bot1_blue_e.xml  bot1_blue_f.xml  bot1_blue_g.xml  bot1_yellow_a.xml  bot1_yellow_a_template.xml  bot1_yellow_b.xml  bot1_yellow_c.xml  bot1_yellow_d.xml  bot1_yellow_e.xml  bot1_yellow_f.xml  bot1_yellow_g.xml  bot1_yellow_h.xml  bot2_blue_a.xml  bot2_blue_a.xml.bak  bot2_blue_a_0515.xml.bak  bot2_blue_a_0519_old_lidar.bak  bot2_blue_a_OK.xml  bot2_blue_b.xml  bot2_blue_c.xml  bot2_blue_d.xml  bot2_blue_d_dyn.xml  bot2_blue_e.xml  bot2_blue_f.xml  bot2_yellow_a.xml  bot2_yellow_c.xml  bot2_yellow_c.xml.convert  bot2_yellow_d.xml  bot2_yellow_d_dyn.xml  bot2_yellow_e.xml  bot2_yellow_f.xml  bt_blue_diff_pre.xml  bt_m_subtree.xml  bt_m_tree_node_model.xml  (+11 more)
src/bt_app_2025/include/bt_app_2025/: bt_nodes.h  bt_nodes_firmware.h  bt_nodes_navigation.h  bt_nodes_others.h  bt_nodes_receiver.h  bt_nodes_util.h
src/bt_app_2025/launch/: bag.launch  bt.launch  bt_launch.py  bt_launch_test.py  comm.launch
src/bt_app_2025/params/: config_path.yaml  config_path_test.yaml  finisher.yaml  map_points.yaml  mission_set.yaml  nav_parameters.yaml
src/bt_app_2025/src/: bt_m.cpp  bt_nodes.cpp  bt_nodes_firmware.cpp  bt_nodes_navigation.cpp  bt_nodes_others.cpp  bt_nodes_receiver.cpp  bt_nodes_util.cpp
src/bt_app_test/: CMakeLists.txt  package.xml
src/bt_app_test/bt_config/: Project.btproj  bt.xml  bt_tree_node_model.xml
src/bt_app_test/include/bt_app_test/: bt_action_node_lib.h  bt_decorator_node_lib.h  bt_utils_node_lib.h  main_script.h
src/bt_app_test/launch/: bt_launch.py  decorator_launch.py  loop_launch.py  nav_launch.py  parallel_launch.py  port_remapping_launch.py  pub_sub_launch.py  script_launch.py  simple_nav_launch.py  subtree_launch.py  tf_launch.py
src/bt_app_test/params/: config_path.yaml  script.yaml
src/bt_app_test/src/: bt_action_node_lib.cpp  bt_decorator_node_lib.cpp  bt_utils_node_lib.cpp  game.cpp  main_script.cpp
src/bt_app_test/src/node/: bt_ros2.cpp
src/bt_app_test/src/test_server/: actionClient.cpp  actionServer.cpp  localizationServer.cpp  navigationServer.cpp  topicPubServer.cpp
src/btcpp_ros2_interfaces/: CMakeLists.txt  package.xml
src/btcpp_ros2_interfaces/msg/: Localization.msg
src/py_plan_generator/: bot1_blue_a.xml  bot1_blue_a_template.xml  bot1_blue_b.xml  bot1_blue_c.xml  bot1_blue_d.xml  bot1_blue_e.xml  bot1_blue_f.xml  bot1_blue_g.xml  bot1_yellow_a.xml  bot1_yellow_a_template.xml  bot1_yellow_b.xml  bot1_yellow_c.xml  bot1_yellow_d.xml  bot1_yellow_e.xml  bot1_yellow_f.xml  bot1_yellow_g.xml  bot1_yellow_h.xml  bt_plan_a_Yellow.xml  differency_of_plans.py  input_data.xml  source_points.xml  subtrees.xml  template_bot1_blue_a.xml  test.py  test_output.xml  xml_converter.py  xml_converter_3311.py  xml_converter_332.py  xml_converter_333.py  xml_plan_generator.py
src/rival_simulation/: CMakeLists.txt  package.xml
src/rival_simulation/include/rival_simulation/: bt_nodes_navigation.h  rival_navigation.h
src/rival_simulation/launch/: bt_launch.py
src/rival_simulation/params/: config_path.yaml  map_points.yaml
src/rival_simulation/rival_main_config/: bt_m_tree_node_model.xml  bt_rival_script.xml
src/rival_simulation/src/: bt_nodes_navigation.cpp  game.cpp  my_teleop.cpp  rival_main.cpp  rival_navigation.cpp
src/startup/: CMakeLists.txt  package.xml
src/startup/src/: startup.cpp
